Fixing Quote overflow with media query

--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/*applies to whole page*/
+
 
 *{
   box-sizing: border-box;
@@ -19,11 +21,13 @@ p{
   font-family: brushgyo;
   font-size: 60px;
 }
-.quote{
-  font-family: RedVelvet-Regular;
-}
 
+body{
+  margin: auto;
+  text-align: center;
+  }
 
+/*header section*/
 h1{
   font-family:TT-Moons-Thin-Italic-DEMO;
   font-size: 4vw;
@@ -49,70 +53,82 @@ li{
         display: inline-block;
 }
 
-
-
-
-
-
-
 ul{
   display: inline;
 }
 
+/*little quote*/
 .quote{
   background-color: mintcream;
-  height:100px;
+  height:120px;
   width:100%;
   text-align: center;
   margin: auto;
   padding-top: 15px;
-  padding-left: 20%;
-  padding-right:20%;
+  padding-left: 10%;
+  padding-right:10%;
+  font-family: RedVelvet-Regular;
+  font-size: 14px;
 }
 
-
-body{
-  margin: auto;
-  text-align: center;
-  }
+/*hero image*/
 
   .hero{
-    width:80%;
+    width:100%;
     margin: auto;
     display: block;
     margin-top: 20px;
   }
+  /*column image*/
 .images{
   margin: auto;
   text-align: center;
   display: inline-block;
-  width: 80%;
+  width: 100%;
 
 
 }
-/* hover effect*/
 
 #wrapper{
   display: inline;
-  width:40%;
+  width:49%;
 }
 .all{
-  width:40%;
+  width:49%;
   margin: auto;
-
-
 
 }
 p.text{
   display:none;
 }
+@media (min-width: 681px) {
+  .quote{
+    height:170px;
+      padding-top: 23px;
+      padding-left: 20%;
+      padding-right:20%;
+      font-family: RedVelvet-Regular;
+      font-size: 14px;
 
+  }
 
 @media (min-width: 600px) {
   .all{
     width:100%;
-
-
+}
+.images{
+  width: 80%;
+}
+.hero{
+  width:80%;
+}
+.quote{
+height:170px;
+  padding-top: 23px;
+  padding-left: 20%;
+  padding-right:20%;
+  font-family: RedVelvet-Regular;
+  font-size: 20px;
 }
 /*columns hover effect*/
 p.text{
